# gtk4-rs-test

./: .gitignore  Cargo.toml  build.rs  flake.nix
resources/: resources.gresource.xml
resources/ui/: main_window.ui
src/: main.rs
src/ui/main_window/: imp.rs  mod.rs
